# spiri_go

./: .gitignore  CMakeLists.txt  README.md  install-spirigo.sh  package.xml  setup.py
SpiriGo/: SpiriGo.py  spiri_except.py
include/: spiri_go.h
include/spiri_go/: spiri_go.h
initialize/: apm_sim  apm_sim_ros
launch/: cam0.launch  cam1.launch  jetson.launch  kbteleop.launch~  launch_new.sh  mavinit.scr  sitl.launch  sitl.launch~  spiri.launch  spiri_go.launch~
scripts/: mavkbteleop~
spiripy/: api.py  spiri_except.py
src/: spiri_go.cpp  spiri_go.cpp~
srv/: LocalPosition.srv
tests/: api.py  sim.py
